--- a/app/index.html
+++ b/app/index.html
@@ -67,8 +67,10 @@
                                     <div class="header-middle__right flex-block centered">
                                         <div class="header-middle__contacts">
                                             <div class="header-middle__phone flex-block centered">
-                                                <div class="icon icon-phone-icon"></div><span class="phone-number"><a
-                                                    href="tel:+7 (903) 969-50-19">+7 (903) 969-50-19</a></span>
+                                                <div class="icon icon-phone-icon"></div>
+                                                <span class="phone-number">
+                                                    <a href="tel:+7 (903) 969-50-19">+7 (903) 969-50-19</a>
+                                                </span>
                                             </div>
                                             <div class="header-middle__email">
                                                 <span class="small-text">Пишите нам: <a href="mailto:emailfirm@mail.com">emailfirm@mail.com</a></span>
@@ -84,17 +86,68 @@
                     </div>
                 </div>
                 <div class="header-bottom">
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-12"></div>
+                            <div class="col-md-12">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <nav class="header-nav">
+                                                <ul>
+                                                    <li><a href="#">АКЦИИ</a></li>
+                                                    <li><a href="#">ВАША ВЫГОДА</a></li>
+                                                    <li><a href="#">ПРЕИМУЩЕСТВА</a></li>
+                                                    <li><a href="#">ПРАЙС-ЛИСТ</a></li>
+                                                    <li><a href="#">ФОТОГАЛЕРЕЯ</a></li>
+                                                    <li><a href="#">ДОСТАВКА</a></li>
+                                                    <li><a href="#">ВОПРОС-ОТВЕТ</a></li>
+                                                    <li><a href="#">КОНТАКТЫ</a></li>
+                                                </ul>
+                                            </nav>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="content"></div>
-    <div class="footer"></div>
+    <div class="container-fluid content">
+        <div class="row main-banner">
+            <div class="col-md-12">
+                <div class="container">
+                    <div class="row">
+                        <div class="main-banner__left col-md-8 ">
+                            <div class="main-banner__title">
+                                <span>Производим пластиковые бордюры с доставкой по всей России от 1 м</span>
+                            </div>
+                            <div class="main-banner__info">
+                                <div class="main-banner__img">
+                                    <img src="/img/main-banner-bordure.png" alt="">
+                                </div>
+                                <div class="main-banner__text">
+                                    <div class="main-banner__text-top">
+                                        <span>АКЦИЯ!</span>
+                                    </div>
+                                    <div class="main-banner__text-bottom">
+                                        <span>При покупке садового бордюра «BORDUR» до 15 апреля <span>скидка 10%</span> на весь ассортимент!</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        
+    </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
