banner block + how to block + why us block

--- a/app/index.html
+++ b/app/index.html
@@ -129,16 +129,104 @@
                                 </div>
                                 <div class="main-banner__text">
                                     <div class="main-banner__text-top">
-                                        <span>АКЦИЯ!</span>
+                                        <span class="main-banner__offer text-orange">АКЦИЯ!</span>
                                     </div>
                                     <div class="main-banner__text-bottom">
-                                        <span>При покупке садового бордюра «BORDUR» до 15 апреля <span>скидка 10%</span> на весь ассортимент!</span>
+                                        <span>При покупке садового бордюра «BORDUR» до 15 апреля <span class="text-orange">скидка 10%</span> на весь ассортимент!</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-
+                        <div class="main-banner__form col-md-3">
+                            <div class="main-banner__form-img"></div>
+                            <div class="main-banner__form-title">
+                                <span>Скачать <span class="text-orange">каталог</span> со всеми видами пластиковых бордюров</span>
+                            </div>
+                            <form action="javascript:void(0)">
+                                <div class="form-group">
+                                    <label for="name" class="icon-man-icon"></label>
+                                    <input type="text" id="name" placeholder="Ваше имя">
+                                </div>
+                                <div class="form-group">
+                                    <label for="phone" class="icon-phone-icon"></label>
+                                    <input type="text" id="phone" placeholder="Ваш номер телефона">
+                                </div>
+                                <button type="submit" class="btn btn-big btn-orange">СКАЧАТЬ КАТАЛОГ</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row how-to">
+            <div class="col-md-12">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="how-to__block">
+                                <div class="how-to__left col-md-8">
+                                    <div class="icon-newspaper-icon"></div>
+                                    <div class="how-to__text">
+                                        <span class="text-title">“Как правильно выбрать бордюры под свой проект ландшафтного дизайна?”</span>
+                                        <p class="text-paragraph">Идейные соображения высшего порядка, а также рамки и место обучения кадров требуют определения и уточнения систем массового участия. Товарищи! Рамки и место обучения кадров позволяет выполнять важные задания по разработке модели развития...</p>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <button class="btn btn-white">ЧИТАТЬ СТАТЬЮ</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row why-us">
+            <div class="col-md-12">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="block-title">
+                                <span class="block-title__text">Почему выгоднее покупать у нас?</span>
+                                <span class="block-title__stripe-green"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row flex-block">
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="why-us__block">
+                                <div class="why-us__img">
+                                    <div class="icon-factory-icon"></div>
+                                </div>
+                                <span class="text-title">Собственное производство</span>
+                                <p class="text-paragraph">Таким образом сложившаяся структура организации требуют определения и уточнения систем массового участия.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="why-us__block">
+                                <div class="why-us__img">
+                                    <div class="icon-snow-icon"></div>
+                                </div>
+                                <span class="text-title">Морозостойкий пластик</span>
+                                <p class="text-paragraph">Таким образом сложившаяся структура организации требуют определения и уточнения систем массового участия.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="why-us__block">
+                                <div class="why-us__img">
+                                    <div class="icon-track-icon"></div>
+                                </div>
+                                <span class="text-title">Доставка по всей России</span>
+                                <p class="text-paragraph">Таким образом сложившаяся структура организации требуют определения и уточнения систем массового участия.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="why-us__block">
+                                <div class="why-us__img">
+                                    <div class="icon-box-icon"></div>
+                                </div>
+                                <span class="text-title">Оплата по факту доставки</span>
+                                <p class="text-paragraph">Таким образом сложившаяся структура организации требуют определения и уточнения систем массового участия.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
