--- a/app/index.html
+++ b/app/index.html
@@ -986,29 +986,37 @@
                                 </div>
                                 <hr>
                                 <div class="contact-info__address">
+                                    <div class="icon icon-location-icon"></div>
                                     <span>
                                         <span class="bold-text">Адрес:</span>
                                          г. Москва, г. Щербинка, Симферопольское шоссе 14Б с1
                                      </span>
                                 </div>
                                 <div class="contact-info__phone">
+                                    <div class="icon icon-phone-orange-icon"></div>
                                     <span>
                                         <span class="bold-text">Телефон:</span>
                                          +7 (903) 969-50-19 (Самовывоз: предварительно звонить!)
                                     </span>    
                                 </div>
-                                    <div class="btn header-top__prices flex-block centered">
+                                    <div class="btn btn-white header-top__prices flex-block centered">
                                         <div class="icon icon-xls-icon"></div>
                                         <a href="#">Скачать прайс-лист <span class="text-green">(*.xls)</span></a>
                                     </div>
-                                <span></span>
+                                <div class="contact-info__bottom-text">
+                                    <div class="icon-lock-icon"></div>
+                                    <span>Мы гарантируем конфиденциальность данных</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-md-offset-1 col-md-3">
-                            
+                        <div class="footer-middle col-md-offset-1 col-md-3">
+                            <span class="footer-middle__text">Специальные условия для дилеров и ландшафтных дизайнеров!</span>
+                            <span class="footer-middle__text">Звоните по номеру: <span class="text-orange">8 (800) 123-45-68</span>
+                            </span>
                         </div>
-                        <div class="col-md-3">
-                            
+                        <div class="footer-right col-md-3">
+                            <span>Или оставьте контактный телефон и наши специалисты свяжутся с Вами в кротчайший срок</span>
+                            <button class="btn btn-orange">перезвонить вам</button>
                         </div>
                     </div>
                 </div>
