--- a/app/index.html
+++ b/app/index.html
@@ -8,12 +8,12 @@
     <title>Bordures</title>
 
     <!-- Bootstrap -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
-    <link href="/css/fonts.css" type="text/html" rel="stylesheet">
-    <link href="/css/sprite.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.min.css">
-    <link rel="stylesheet" href="/css/media.css">
+    <link href="css/fonts.css" type="text/html" rel="stylesheet">
+    <link href="css/sprite.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/media.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="main-banner__info">
                                     <div class="main-banner__img">
-                                        <img src="/img/main-banner-bordure.png" alt="">
+                                        <img src="img/main-banner-bordure.png" alt="">
                                     </div>
                                     <div class="main-banner__text">
                                         <div class="main-banner__text-top">
@@ -402,7 +402,7 @@
                                 <div class="our-bordures__info-block">
                                     <div class="our-bordures__row">
                                         <div class="our-bordures__img">
-                                            <img src="/img/product-img.png" alt="">
+                                            <img src="img/product-img.png" alt="">
                                         </div>
                                         <div class="our-bordures__info">
                                             <span class="our-bordures__info-title">НАЗНАЧЕНИЕ:</span>
@@ -454,7 +454,7 @@
                                 <div class="our-bordures__info-block">
                                     <div class="our-bordures__row">
                                         <div class="our-bordures__img">
-                                            <img src="/img/product-img.png" alt="">
+                                            <img src="img/product-img.png" alt="">
                                         </div>
                                         <div class="our-bordures__info">
                                             <span class="our-bordures__info-title">НАЗНАЧЕНИЕ:</span>
@@ -508,7 +508,7 @@
                                 <div class="our-bordures__info-block">
                                     <div class="our-bordures__row">
                                         <div class="our-bordures__img">
-                                            <img src="/img/product-img.png" alt="">
+                                            <img src="img/product-img.png" alt="">
                                         </div>
                                         <div class="our-bordures__info">
                                             <span class="our-bordures__info-title">НАЗНАЧЕНИЕ:</span>
@@ -560,7 +560,7 @@
                                 <div class="our-bordures__info-block">
                                     <div class="our-bordures__row">
                                         <div class="our-bordures__img">
-                                            <img src="/img/product-img.png" alt="">
+                                            <img src="img/product-img.png" alt="">
                                         </div>
                                         <div class="our-bordures__info">
                                             <span class="our-bordures__info-title">НАЗНАЧЕНИЕ:</span>
@@ -634,7 +634,7 @@
                     <div class="row flex-block">
                         <div class="col-md-3">
                             <div class="our-projects__block">
-                                <img src="/img/1.png" alt="">
+                                <img src="img/1.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -643,7 +643,7 @@
                                 </div>
                             </div>
                             <div class="our-projects__block">
-                                <img src="/img/2.png" alt="">
+                                <img src="img/2.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -654,7 +654,7 @@
                         </div>
                         <div class="col-md-3">
                             <div class="our-projects__block">
-                                <img src="/img/3.png" alt="">
+                                <img src="img/3.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -663,7 +663,7 @@
                                 </div>
                             </div>
                             <div class="our-projects__block">
-                                <img src="/img/4.png" alt="">
+                                <img src="img/4.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -672,7 +672,7 @@
                                 </div>
                             </div>
                             <div class="our-projects__block">
-                                <img src="/img/5.png" alt="">
+                                <img src="img/5.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -683,7 +683,7 @@
                         </div>
                         <div class="col-lg-2 col-md-3">
                             <div class="our-projects__block">
-                                <img src="/img/6.png" alt="">
+                                <img src="img/6.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -692,7 +692,7 @@
                                 </div>
                             </div>
                             <div class="our-projects__block">
-                                <img src="/img/7.png" alt="">
+                                <img src="img/7.png" alt="">
                                 <div class="our-projects__text">
                                     <div class="our-projects__text-block">
                                         <span>Участок в Подмосковье</span>
@@ -749,7 +749,7 @@
                         <div class="row flex-block">
                             <div class="col-md-4">
                                 <div class="articles__block">
-                                    <img src="/img/news-1.png" alt="">
+                                    <img src="img/news-1.png" alt="">
                                     <span>«Технологии производства бордюров»</span>
                                     <p>Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности играет важную роль в формировании новых предложений. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение соответствующий условий активизации.</p>
                                     <button class="btn btn-white">ЧИТАТЬ СТАТЬЮ</button>
@@ -757,7 +757,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="articles__block">
-                                    <img src="/img/news-2.png" alt="">
+                                    <img src="img/news-2.png" alt="">
                                     <span>«Как правильно устанавливать бордюры?»</span>
                                     <p>Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности играет важную роль в формировании новых предложений. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение соответствующий условий активизации.</p>
                                     <button class="btn btn-white">ЧИТАТЬ СТАТЬЮ</button>
@@ -765,7 +765,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="articles__block">
-                                    <img src="/img/news-3.png" alt="">
+                                    <img src="img/news-3.png" alt="">
                                     <span>«Как правильно сделать изгибы?»</span>
                                     <p>Идейные соображения высшего порядка, а также постоянное информационно-пропагандистское обеспечение нашей деятельности играет важную роль в формировании новых предложений. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности позволяет оценить значение соответствующий условий активизации.</p>
                                     <button class="btn btn-white">ЧИТАТЬ СТАТЬЮ</button>
