--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,7 @@
                             <div class="col-md-12">
                                 <div class="header-middle__block flex-block centered justify-sb">
                                     <div class="header-middle__left flex-block centered">
-                                        <img src="../img/logo.png" alt="" class="logo">
+                                        <img src="img/logo.png" alt="" class="logo">
                                         <div class="header-middle__text">
                                             <span class="aa-font big-text">геопластборд</span>
                                             <span class="aa-font text-upper">Пластиковый бордюр для ландшафтного дизайна</span>
